Developed html structure and added css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+    <head>
+        <title>My portfolio</title>
+        <link href = "style.css" type="text/css" rel = "stylesheet">
+
+    </head>
 
 
-<h1> This is my personal website </h1>
+    <body>
+
+    </body>
+
+</html>
+
+
+
