--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>My portfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-        <link href = "style.css" type="text/css" rel = "stylesheet">
+        <link href = "css/style.css" type="text/css" rel = "stylesheet">
 
     </head>
 
