Created structure for navigation bar of website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,33 @@
 
 
     <body>
-        <h1>Hi, welcome to my website</h1>
+        <header>
+            <div class = "logo"> 
+
+            </div>
+    
+            <nav class = "nav">
+                <ul>
+                    <li class = "name"> Yu Cheng Li</li>
+                    <li class = "resume"> Resume</li> 
+                    <li class = "social">
+                        <ul>
+                            <li class = "linkedin">linkedin</li>
+                            <li class = "github" >Github</li>
+                            <li class = "email" >Email</li>
+                        </ul>
+                    </li>
+                    <li class = "intro"> "Hi I am a software engineer" </li>
+
+
+                </ul>
+            </nav>
+
+        </header>
+       
+        <section class = "project">
+
+        </section>
 
     </body>
 
