--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class = "nav">
                 <ul>
                     <li class = "name"> Yu Cheng Li</li>
-                    <li class = "resume"> Resume</li> 
+                    <li class = "resume">Resume</li> 
                     <li class = "social">
                         <ul>
                             <li class = "linkedin">linkedin</li>
@@ -37,7 +37,37 @@
 
         </header>
        
-        <section class = "project">
+        <section class = "projects">
+            <ul class = "project-nav">
+                <li class = "project--item">Project1</li>
+                <li class = "project--item">Project2</li>
+                <li class = "project--item">Project3</li>
+                <li class = "project--item">Project4</li>
+                <li class = "project--item">Project5</li>
+                <li class = "project--item">Project6</li>
+
+            </ul>
+
+            <div class = "proj--img">
+                <a href=""> 
+                    <img src ="#">             
+                </a>
+                <a href=""> 
+                    <img src ="#">             
+                </a>
+                <a href=""> 
+                    <img src ="#">             
+                </a>
+                <a href=""> 
+                    <img src ="#">             
+                </a>
+                <a href=""> 
+                    <img src ="#">             
+                </a>
+                <a href=""> 
+                    <img src ="#">             
+                </a>
+            </div>
 
         </section>
 
