Tried to add proper spacing but failed

--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
 
             </div>
     
-            <nav class = "nav">
+            <nav class = "nav-top">
                 <ul>
                     <li class = "name"> Yu Cheng Li</li>
                     <li class = "resume">Resume</li> 
                     <li class = "social">
-                        <ul>
+                        <ul class ="social-list">
                             <li class = "linkedin">linkedin</li>
                             <li class = "github" >Github</li>
                             <li class = "email" >Email</li>
                         </ul>
                     </li>
-                    <li class = "intro"> "Hi I am a software engineer" </li>
+                    <li class = "intro"> "Hi I am a software engineer gmrdgmdgodrgdkrgkdgkd
+                        rgmdrmgdjgodopgkmdoprkmgodrkopgkmopdrgopmdropmgpdrgmdomgopdrm
+                        gdmrgojdropgopdrmgmdropmgmdrpogmdpormgpomdrogmdromgopdrmg
+                        drgmrpdmgpomdropgmpdormgoprmdogmdrmgopdrmopgmordpmogpmdr" </li>
 
 
                 </ul>
