Updated html layout

--- a/index.html
+++ b/index.html
@@ -1,82 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
+    />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+  </head>
 
-    <head>
-        <meta charset="UTF-8"> 
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>My portfolio</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-        <link href = "css/style.css" type="text/css" rel = "stylesheet">
+  <body>
+    <header>
+      <img src="#" />
+    </header>
 
-    </head>
+    <nav>
+      <ul>
+        <li id="identity">Yu Cheng Li</li>
+        <li id="resume">Resume</li>
+        <li id="social">Linkedin</li>
+        <li id="intro">
+          <p>
+            fesflpefpesfsefllseflseflpseflp[selflsepflps[elfp[l
+            fwhefoijwioefjiowejfiojewojfiwjefjwejfiowejfiojweio
+            fwehfiwheiofjwiojfijweifjiwoejfijweiofjwiefjweifiwi
+            wfohoiwefiowjhfiowjhiofjhiowjfiojwieofiowfijwefiwjf
+          </p>
+        </li>
+      </ul>
+    </nav>
 
-    <!-- hi -->
-    <body>
-        <header>
-            <div class = "logo"> 
+    <main>
+      <section class="projects">
+        <ul class="project-list">
+          <li id="pa">a-project</li>
+          <li id="pb">b-project</li>
+          <li id="pc">c-project</li>
+          <li id="pd">d-project</li>
+          <li id="pe">e-project</li>
+          <li id="pf">f-project</li>
+          <li id="pg">g-project</li>
+          <li id="ph">h-project</li>
+        </ul>
 
-            </div>
-    
-            <nav class = "nav-top">
-                <ul>
-                    <li class = "name"> Yu Cheng Li</li>
-                    <li class = "resume">Resume</li> 
-                    <li class = "social">
-                        <ul class ="social-list">
-                            <li class = "linkedin">linkedin</li>
-                            <li class = "github" >Github</li>
-                            <li class = "email" >Email</li>
-                        </ul>
-                    </li>
-                    <li class = "intro"> "Hi I am a software engineer gmrdgmdgodrgdkrgkdgkd
-                        rgmdrmgdjgodopgkmdoprkmgodrkopgkmopdrgopmdropmgpdrgmdomgopdrm
-                        gdmrgojdropgopdrmgmdropmgmdrpogmdpormgpomdrogmdromgopdrmg
-                        drgmrpdmgpomdropgmpdormgoprmdogmdrmgopdrmopgmordpmogpmdr" </li>
+        <div class="image-container">
+          <img src="#" />
+          <img src="#" />
+          <img src="#" />
+          <img src="#" />
+          <img src="#" />
+          <img src="#" />
+          <img src="#" />
+        </div>
+      </section>
+    </main>
 
-
-                </ul>
-            </nav>
-
-        </header>
-       
-        <section class = "projects">
-            <ul class = "project-nav">
-                <li class = "project--item">Project1</li>
-                <li class = "project--item">Project2</li>
-                <li class = "project--item">Project3</li>
-                <li class = "project--item">Project4</li>
-                <li class = "project--item">Project5</li>
-                <li class = "project--item">Project6</li>
-
-            </ul>
-
-            <div class = "proj--img">
-                <a href=""> 
-                    <img src ="#">             
-                </a>
-                <a href=""> 
-                    <img src ="#">             
-                </a>
-                <a href=""> 
-                    <img src ="#">             
-                </a>
-                <a href=""> 
-                    <img src ="#">             
-                </a>
-                <a href=""> 
-                    <img src ="#">             
-                </a>
-                <a href=""> 
-                    <img src ="#">             
-                </a>
-            </div>
-
-        </section>
-
-    </body>
-
+    <footer></footer>
+  </body>
 </html>
-
-
-
