Rendered nav and header of website

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
   <body>
     <header>
-      <img src="#" />
+      <img class="logo" src="#" />
     </header>
 
     <nav>
-      <ul>
+      <ul class="nav-list">
         <li id="identity">Yu Cheng Li</li>
         <li id="resume">Resume</li>
         <li id="social">Linkedin</li>
         <li id="intro">
           <p>
-            fesflpefpesfsefllseflseflpseflp[selflsepflps[elfp[l
+            Fesflpefpesfsefllseflseflpseflp[selflsepflps[elfp[l
             fwhefoijwioefjiowejfiojewojfiwjefjwejfiowejfiojweio
             fwehfiwheiofjwiojfijweifjiwoejfijweiofjwiefjweifiwi
             wfohoiwefiowjhfiowjhiofjhiowjfiojwieofiowfijwefiwjf
