Todo add project header

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
     <main>
       <section class="projects">
+        <div class="list" >
+            
+        </div>
         <ul class="project-list">
           <li id="pa">a-project</li>
           <li id="pb">b-project</li>
