--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&family=Zen+Dots&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
@@ -14,7 +15,8 @@
 
   <body>
     <header>
-      <img class="logo" src="#" />
+      <!-- <img class="logo" src="#" /> -->
+      <h1 class='logo'>Hi</h1>
     </header>
 
     <nav>
@@ -24,10 +26,7 @@
         <li id="social">Linkedin</li>
         <li id="intro">
           <p>
-            Fesflpefpesfsefllseflseflpseflp[selflsepflps[elfp[l
-            fwhefoijwioefjiowejfiojewojfiwjefjwejfiowejfiojweio
-            fwehfiwheiofjwiojfijweifjiwoejfijweiofjwiefjweifiwi
-            wfohoiwefiowjhfiowjhiofjhiowjfiojwieofiowfijwefiwjf
+            I like to program
           </p>
         </li>
       </ul>
@@ -35,28 +34,33 @@
 
     <main>
       <section class="projects">
-        <div class="list" >
-            
+        <div class = "project-list"> 
+          <h4 class="project-header">Projects</h4>
+          <ul class="project-btn">
+            <li id="pa">a-project</li>
+            <li id="pb">b-project</li>
+            <li id="pc">c-project</li>
+            <li id="pd">d-project</li>
+            <li id="pe">e-project</li>
+            <li id="pf">f-project</li>
+            <li id="pg">g-project</li>
+            <li id="ph">h-project</li>
+          </ul>
         </div>
-        <ul class="project-list">
-          <li id="pa">a-project</li>
-          <li id="pb">b-project</li>
-          <li id="pc">c-project</li>
-          <li id="pd">d-project</li>
-          <li id="pe">e-project</li>
-          <li id="pf">f-project</li>
-          <li id="pg">g-project</li>
-          <li id="ph">h-project</li>
-        </ul>
 
-        <div class="image-container">
-          <img src="#" />
-          <img src="#" />
-          <img src="#" />
-          <img src="#" />
-          <img src="#" />
-          <img src="#" />
-          <img src="#" />
+        <div class="image-containers">
+          <div class="image-container">
+            <!-- <img class='project-img' src="resources/images/download.png" /> -->
+          </div>
+          <div class="image-container">
+            <!-- <img class='project-img' src="resources/images/download.png" /> -->
+          </div>
+          <div class="image-container">
+            <!-- <img class='project-img' src="resources/images/download.png" /> -->
+          </div>
+          <div class="image-container">
+            <!-- <img class='project-img' src="resources/images/download.png" /> -->
+          </div>
         </div>
       </section>
     </main>
