added hover and wrote intro

--- a/index.html
+++ b/index.html
@@ -16,17 +16,26 @@
   <body>
     <header>
       <!-- <img class="logo" src="#" /> -->
-      <h1 class='logo'>Hi</h1>
+      <h1 class='logo'>Hi.</h1>
     </header>
 
     <nav>
       <ul class="nav-list">
-        <li id="identity">Yu Cheng Li</li>
-        <li id="resume">Resume</li>
-        <li id="social">Linkedin</li>
-        <li id="intro">
+        <li class='upper obj' id="identity">Yu Cheng Li</li>
+        <li class='upper obj' id="resume">Resume</li>
+        <li class='upper list' id="social"> 
+          <ul class="social-lower">
+            <li id='Email'>Email </li>
+            <li id='GitHub'>GitHub </li>
+            <li id='linkedin'>Linkedin </li>
+          </ul>
+        </li>
+        <li class='upper obj' id="intro">
           <p>
-            I like to program
+            I am a third year computer science student at the University of British Columbia. <br>  
+            I am a software engineer that is actively learning and building new projects. Outside of CS,
+            <br> I enjoy playing badminton and learning new languages. I am always
+            open to connect so feel free to reach out to me! :)  
           </p>
         </li>
       </ul>
